Added points activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".RatingActivity"></activity>
         <activity android:name=".BarActivity" />
         <activity android:name=".CartActivity"></activity>
+        <activity android:name=".PointsActivity"></activity>
     </application>
 
 </manifest>
