--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RatingActivity" />
+        <activity android:name=".RatingActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".BarActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".PointsActivity" />
