--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeMaterial">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".BarpickActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RatingActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".RatingActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".BarActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".PointsActivity" />
-        <activity android:name=".CouponActivity"></activity>
-        <service android:name=".CouponService"></service>
+        <activity android:name=".CouponActivity" />
+
+        <service android:name=".CouponService" />
+
     </application>
 
 </manifest>
